# multi-node-blockchain-kcoin

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/kcoin-cli/: Cargo.toml
crates/kcoin-cli/src/: main.rs
crates/kcoin-consensus/: Cargo.toml
crates/kcoin-consensus/src/: engine.rs  lib.rs  simulation.rs  types.rs
crates/kcoin-node/: Cargo.toml
crates/kcoin-node/src/: api.rs  config.rs  lib.rs  main.rs  network.rs  runtime.rs  storage.rs
crates/kcoin-protocol/: Cargo.toml
crates/kcoin-protocol/examples/: generate_test_vectors.rs
crates/kcoin-protocol/src/: block.rs  commit.rs  crypto.rs  error.rs  ledger.rs  lib.rs  transaction.rs  wasm.rs
crates/kcoin-protocol/test-vectors/: wallet.json
crates/kcoin-protocol/tests/: decoder_properties.rs  golden_vectors.rs
docker/: nginx.conf
docs/: architecture.md  benchmarks.md  demo.md  persistence.md  protocol.md  synchronization.md  threat-model.md
docs/adr/: 0001-consensus.md  0002-protocol.md  0003-persistence-and-replay.md  0004-networking-and-recovery.md  0005-browser-wallet-and-explorer.md
scripts/: build-demo-highlight.ps1  build-demo-highlight.py
web/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css  types.ts
web/src/components/: app-shell.tsx  ownership-map.tsx  transaction-table.tsx  ui.tsx  validator-rail.tsx
web/src/lib/: api-context.tsx  api.ts  bech32.ts  demo.ts  format.ts  ownership.ts  search.ts  use-paginated-resource.ts  use-resource.ts  wallet-context.tsx  wallet.ts
web/src/pages/: address.tsx  blocks.tsx  earn.tsx  not-found.tsx  overview.tsx  ownership.tsx  transactions.tsx  validators.tsx  wallet.tsx
web/src/test/: certificate.test.tsx  demo.test.ts  ownership.test.ts  pagination.test.tsx  search.test.ts  transaction-finality.test.tsx  wallet-backup.test.ts  wallet-finality.test.ts  wallet-vectors.test.ts
