[workspace]
members = [
    "crates/kcoin-protocol",
    "crates/kcoin-consensus",
    "crates/kcoin-node",
    "crates/kcoin-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
bech32 = "0.11"
blake3 = "1.8"
borsh = { version = "1.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive", "env"] }
ed25519-dalek = { version = "2.2", features = ["rand_core", "serde"] }
futures = "0.3"
hex = "0.4"
libp2p = { version = "0.56", features = [
    "tokio",
    "dns",
    "quic",
    "gossipsub",
    "request-response",
    "cbor",
    "identify",
    "ping",
    "mdns",
    "macros",
] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
wasm-bindgen = "0.2"
zeroize = "1.8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
