[package]
name = "kcoin-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "kcoin"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
kcoin-node = { path = "../kcoin-node" }
kcoin-protocol = { path = "../kcoin-protocol" }
rand.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
