[package]
name = "kcoin-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "kcoin_node"
path = "src/lib.rs"

[[bin]]
name = "kcoin-node"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
base64.workspace = true
blake3.workspace = true
borsh.workspace = true
chrono.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
futures.workspace = true
hex.workspace = true
kcoin-consensus = { path = "../kcoin-consensus" }
kcoin-protocol = { path = "../kcoin-protocol" }
libp2p.workspace = true
rand.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3.17"
tower = { version = "0.5", features = ["util"] }
